--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^24.9.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.38.0",
